# car

./: CMakeLists.txt
app/: CMakeLists.txt
app/src/: main.c
hal/include/hal/: drive.h
hal/src/: drive.c
